# dolly_scaller

./: .env.example  .env.local  .gitignore  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-01-26_add_users.py  2025-01-28_init.py  2025-01-29_create_subscriptions_details_table.py  2025-01-29_create_users_table.py  2025-01-30_create_payments_table.py  2025-01-30_create_user_subscriptions_table.py  2025-02-04_formates_table.py  2025-02-04_merge_limits_count.py  2025-02-05_merge_fix_limits_and_format_migrations.py  2025-02-10_add_referral.py
sql_scripts/: add_referral_subscription.sql  populate_formats.sql  populate_subscriptions.sql
src/: config.py  database.py  exceptions.py  logger.py  main.py  schemas.py  utils.py
src/model/: models.py  repository.py  router.py  service.py
src/subcription/: exception.py  models.py  repository.py  service.py
src/subscription_details/: exception.py  model.py  repository.py  router.py  service.py
src/user/: exception.py  model.py  repository.py  router.py  service.py
src/user_profile/: exception.py  model.py  repository.py  router.py  service.py
