[tool.poetry]
name = "dolly-core"
version = "0.1.0"
description = "TBA"
authors = ["artyom.filippenkov@gmail.com"]
readme = "README.md"
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "3.11.11"
fastapi = "^0.111.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.2"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sentry-sdk = "^2.5.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
flake8 = "5.0.4"
black = "23.9.1"
isort = "5.12.0"
mypy = "1.6.0"
Flake8-pyproject = "1.2.3"
pre-commit = "3.4.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"
python-json-logger = "^2.0.7"
prometheus-client = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
lines_before_imports = 2
lines_after_imports = 2
multi_line_output = 3
force_grid_wrap = 2
lines_between_sections = 1
include_trailing_comma = true
use_parentheses = true
treat_all_comments_as_code = true
split_on_trailing_comma = true
combine_as_imports = true

[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
)/
'''

# linters
[tool.flake8]
max-line-length = 100
max-complexity = 18
ignore = ['E203', 'E266', 'E704', 'W503', 'B905', 'B907']
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
exclude = ['migrations', 'data', '.venv']

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
strict_optional = true
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false
check_untyped_defs = false
strict_optional = false
